# deltacode

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  NOTICE  NOTICE.txt  README.md  README.rst  appveyor.yml  azure-pipelines.yml  codecov.yml  configure  configure.bat  coverage.xml  deltacode  deltacode.ABOUT  deltacode.bat  docker-compose.yml  expected.json  output.json  python36  pyvenv.cfg  requirements-dev.txt  requirements.txt  setup.cfg  setup.cfg.dev  setup.py  test.csv
.pytest_cache/v/cache/: lastfailed
docs/: Makefile  requirements.txt
docs/scripts/: doc8_style_check.sh
docs/source/: conf.py  index.rst  license.rst
docs/source/deltacode/: GSOC_2021_report.rst  comprehensive_installation.rst  deltacode_output.rst  development.rst  index.rst
etc/: configure.py
etc/ci/: azure-mac.yml
etc/conf/: base.py
etc/conf/dev/: requirements_base.txt
etc/release/: MANIFEST.in.release  release.sh  setup.cfg.release
etc/scripts/: json2csv.py  test_json2csv.py
samples/: class1.json  class2.json  samples.json  test.json  test2.json
src/deltacode/: NOTICE  __init__.py  cli.py  cli_test_utils.py  models.py  test_utils.py  utils.py  virtualcodebase.py
src/packageurl/contrib/: url2purl.py
tests/: test_cli.py  test_deltacode.py  test_models.py  test_utils.py  test_virtualcodebase.py
tests/.cph/: .test_deltacode.py_36c15fe2150d198c4b21f7a8cd747059.prob
tests/contrib/: test_packageurl.py
tests/contrib/data/: test-suite-data.json
tests/contrib/test_url2purl/: test_url2purl.py
(+298 files in other folders)
